master/course/content/python/etc/kubernetes/manifests/dc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: python
spec:
  replicas: 2
  selector:
    app: python
    kind: dc
  template:
    metadata:
      labels:
        app: python
        kind: dc
    spec:
      containers:
      - 
        command:
        - python
        - -m
        - http.server
        - '9000'
        image: docker.io/library/python:latest
        name: python
        ports:
        -
          containerPort: 9000
          protocol: TCP
        resources:
          limits:
            cpu: 40m
            memory: 40M
          requests:
            cpu: 20m
            memory: 20M
        securityContext:
          readOnlyRootFilesystem: true
        volumeMounts:
        - 
          mountPath: /var/data/index.html
          name: python
          readOnly: true
          subPath: index.html
        - 
          mountPath: /var/data/tmp/
          name: tmp
          readOnly: false
        workingDir: /var/data/
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: "topology.kubernetes.io/zone"
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: python
              kind: dc
        - maxSkew: 1
          topologyKey: "kubernetes.io/hostname"
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: python
              kind: dc
      volumes:
      - 
        configMap:
          defaultMode: 0400
          items: 
          -
            key: index.html
            mode: 0400
            path: index.html
          name: python
        name: python
      -
        emptyDir:
          medium: Memory
          sizeLimit: 10Mi
        name: tmp
