master/course/content/python/etc/kubernetes/manifests/ds.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: ds
spec:
  selector:
    matchLabels:
      app: python
      kind: ds
  template:
    metadata:
      labels:
        app: python
        kind: ds
    spec:
      containers:
      - 
        command:
        - python
        - -m
        - http.server
        - '9000'
        image: docker.io/library/python:latest
        name: python
        ports:
        -
          containerPort: 9000
          protocol: TCP
        resources:
          limits:
            cpu: 40m
            memory: 40M
          requests:
            cpu: 20m
            memory: 20M
        securityContext:
          readOnlyRootFilesystem: true
        volumeMounts:
        - 
          mountPath: /var/data/index.html
          name: python
          readOnly: true
          subPath: index.html
        - 
          mountPath: /var/data/tmp/
          name: tmp
          readOnly: false
        workingDir: /var/data/
      volumes:
      - 
        configMap:
          defaultMode: 0400
          items: 
          -
            key: index.html
            mode: 0400
            path: index.html
          name: ds
        name: python
      -
        emptyDir:
          medium: Memory
          sizeLimit: 10M
        name: tmp
