master/course/content/python/etc/kubernetes/manifests/po.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: python
    kind: po
  name: python
spec:
  containers:
  - 
    command:
    - python
    - -m
    - http.server
    - '9000'
    image: docker.io/library/python:latest
    name: python
    ports:
    -
      containerPort: 9000
      protocol: TCP
    resources:
      limits:
        cpu: 40m
        memory: 40M
      requests:
        cpu: 20m
        memory: 20M
    securityContext:
      readOnlyRootFilesystem: true
    volumeMounts:
    - 
      mountPath: /var/data/index.html
      name: python
      readOnly: true
      subPath: index.html
    - 
      mountPath: /var/data/index2.html
      name: python2
      readOnly: true
      subPath: index2.html
    -
      mountPath: /var/data/tmp/
      name: tmp
      readOnly: false
    workingDir: /var/data/
  volumes:
  - 
    secret:
      defaultMode: 0400
      items: 
      -
        key: index.html
        mode: 0400
        path: index2.html
      secretName: python
    name: python2
  - 
    configMap:
      defaultMode: 0400
      items: 
      -
        key: index.html
        mode: 0400
        path: index.html
      name: python
    name: python
  -
    emptyDir:
      medium: Memory
      sizeLimit: 10M
    name: tmp
