master/course/content/python/etc/kubernetes/manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: python
spec:
  ports:
  - 
    port: 80
    targetPort: 9000
  selector:
    app: python
  type: ClusterIP
