master/course/content/python/etc/kubernetes/manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: python
spec:
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: python
